seller page and product page updated

--- a/app/views/products/index.erb
+++ b/app/views/products/index.erb
@@ -1,3 +1,4 @@
+<h1 class="text-center">LIST OF ALL PRODUCTS</h1>
 
 <div class="row">
 <% @products.each do |product| %>
@@ -15,5 +16,11 @@
   </div>
   </a>
 <% end %>
+</div>
+
+<div class="row">
+  <div class="large-12 column">
+    <a href="/products/new" class="button expand radius success ">Add New Product</a>
+  </div>
 </div>
 
