--- a/app/views/products/show.erb
+++ b/app/views/products/show.erb
@@ -1,21 +1,36 @@
-<div class="panel">
-  <p><%= @product.name %></p>
-  <p><%= @product.price %></p>
-  <p><%= @product.description %></p>
-  
-  <div>
-    <% @product.images.each do |image| %>
-    <img src="<%= image.file_path%>">
-    <% end %>
+<div class="row">
+  <div class="large-2 columns">
+    <img src="http://placehold.it/400x300&text=[img]">
+<hr/>
+    <img src="http://placehold.it/400x300&text=[img]">
+<hr/>
+    <img src="http://placehold.it/400x300&text=[img]">
   </div>
 
-</div>
+  <div class="large-5 columns">
+     <div>
+      <% @product.images.each do |image| %>
+      <img class="testing" src="<%= image.file_path%>">
+      <% end %>
+    </div>
+  </div>
 
+  <div class="large-5 columns">
+    <h2>Description:</h2>
+    <p><%= @product.description %>
+      Bacon ipsum dolor sit amet nulla ham qui sint exercitation eiusmod commodo, chuck duis velit. Aute in reprehenderit, dolore aliqua non est magna in labore pig pork biltong.
+      Aute in reprehenderit, dolore aliqua non est magna in labore pig pork biltong. Aute in reprehenderit, dolore aliqua non est magna in labore pig pork biltong. 
+    </p>
+   <div class="panel">
+      <h3 class="text-center"><%= @product.price %></h3>
+      <a href="#" class="expand button radius success">Add to Cart</a>
+    </div>
+  </div>
+</div>
 
 <form action="/products/<%= @product.id %>" method="POST">
   <input type="hidden" name="_method" value="DELETE">
-  <ul class="right">
+  <ul class="center">
     <input type="submit" value="Delete this post" class="button">
   </ul>
 </form>
-
