--- a/app/views/products/new.erb
+++ b/app/views/products/new.erb
@@ -1,3 +1,5 @@
+<h1 class="text-center">Add New Product</h1>
+
 <form id="new_products" method="post" action="/products/new" enctype="multipart/form-data">
   
   <% if @no_file_error%>
