--- a/app/views/cart/index.erb
+++ b/app/views/cart/index.erb
@@ -27,8 +27,9 @@
         $<%= item.product.price %>
       </div>
       <div class ="small-1 columns" id="item_delete">
-        <form>
-          <a href="#"> x </a>
+        <form action="/carts" method="POST">
+          <input type="hidden" name="_method" value="DELETE">
+          <input type="submit">
         </form>
       </div>
     </div>  
@@ -50,11 +51,13 @@
 
 
 
-
-
-<!-- 
-<form method="post" action="/cart/checkout">
-  <label></label>
-  <input></input>
-  <button class="button success" id="sellers_submit" type="submit">Submit</button>
-</form> -->
+<form action="" method="POST">
+  <script
+    src="https://checkout.stripe.com/checkout.js" class="stripe-button"
+    data-key="pk_test_6pRNASCoBOKtIshFeQd4XMUh"
+    data-amount="2000"
+    data-name="Demo Site"
+    data-description="2 widgets ($20.00)"
+    data-image="/128x128.png">
+  </script>
+</form>
