Awesome Product seed files added

--- a/app/views/sellers/seller.erb
+++ b/app/views/sellers/seller.erb
@@ -3,7 +3,7 @@
     <div class="profile-card">
       <img src="<%= seller.image %>">
       <div class="profile-info">
-        <h4 class="subheader">A little about me..</h4>
+        <h4 class="subheader"><%= seller.name %></h4>
         <p>
           <%= seller.blurb %>
         </p>
