--- a/app/views/products/show.erb
+++ b/app/views/products/show.erb
@@ -20,9 +20,8 @@
   <div class="large-5 columns">
    <div class="panel">
     <h2>Description:</h2>
-    <p><%= @product.description %>
-      Bacon ipsum dolor sit amet nulla ham qui sint exercitation eiusmod commodo, chuck duis velit. Aute in reprehenderit, dolore aliqua non est magna in labore pig pork biltong.
-      Aute in reprehenderit, dolore aliqua non est magna in labore pig pork biltong. Aute in reprehenderit, dolore aliqua non est magna in labore pig pork biltong. 
+    <p>
+      <%= @product.description %>
     </p>
       <h3 class="text-center">$<%= @product.price %></h3>
       <form method="post" action="/cart/item/add">  
@@ -38,3 +37,5 @@
     </div>
   </div>
 </div>
+
+
