--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -1,14 +1,37 @@
 <div class="row">
-  <div class ="slider">
-  <div id="slider">
-   <figure>
-    <% @products.take(5).each do |product| %>
-      <% product.images.each do |image| %>
-        <img src="<%= image.file_path %>">
-      <% end %>
-    <% end %>
-   </figure>
+  <div class ="small-4 columns">
+
+      <div id="slider">
+       <figure>
+        <% @products.take(5).each do |product| %>
+          <% product.images.each do |image| %>
+            <img src="<%= image.file_path %>" alt="" />
+          <% end %>
+        <% end %>
+       </figure>
+      </div>
   </div>
+  <div class ="small-4 columns">
+    <div id="slider">
+     <figure>
+      <% @products.last(5).each do |product| %>
+        <% product.images.each do |image| %>
+          <img src="<%= image.file_path %>" alt="" />
+        <% end %>
+      <% end %>
+     </figure>
+    </div>
+  </div>
+  <div class ="small-4 columns">
+    <div id="slider">
+     <figure>
+      <% @products.where(id: 6..10).each do |product| %>
+        <% product.images.each do |image| %>
+          <img src="<%= image.file_path %>" alt="" />
+        <% end %>
+      <% end %>
+     </figure>
+    </div>
   </div>
 </div>
 <br>
