--- a/public/stylesheets/application.css
+++ b/public/stylesheets/application.css
@@ -19,8 +19,8 @@
 }
 
 .slider {
-  max-height: 400px;
-  max-width: 400px;
+  max-height: 100%;
+  max-width: 100%;
 }
 
 .slider {
@@ -28,8 +28,8 @@
 }
 
 #slider {
-  max-width: 400px;
-  max-height: 400px;
+  max-width: 100%;
+  max-height: 100%;
   margin-top: 8%;
 }
 
