--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -11,6 +11,7 @@
   <script src="/javascript/js/foundation/application.js"></script>
   <script src="/javascript/js/foundation/foundation.offcanvas.js"></script>
   <script src="/javascript/js/foundation/foundation.magellan.js"></script>
+  <script src="https://checkout.stripe.com/checkout.js"></script>
 
 
   <!-- Other JS plugins can be included here -->
