--- a/app/views/sellers/seller.erb
+++ b/app/views/sellers/seller.erb
@@ -7,13 +7,9 @@
         <p>
           <%= seller.blurb %>
         </p>
-        <p>
-          <small>Created: <%= seller.created_at %> </small>
-        </p> 
-        <p>
-          <small>Updated: <%= seller.updated_at %></small>
-        </p> 
       </div>
+        <p><small>Created: <%= seller.created_at %> </small></p>
+        <p><small>Updated: <%= seller.updated_at %></small></p> 
     </div>
   </div>
 </a>
