--- a/app/views/sellers/show.erb
+++ b/app/views/sellers/show.erb
@@ -1,34 +1,71 @@
-
 <div class="row">
-  <div class="large-6 columns">
-    <img src="<%=@seller.image%>">
+  <div class="large-12 columns">
+     <div class="row">
+      <div class="large-12 hide-for-small">
+          <div id="featured">
+            <iframe width="1100" height="500" src="https://www.youtube.com/embed/NhQJrz-aDfI" frameborder="0" allowfullscreen></iframe>
+          </div>
+    </div>
   </div>
-  <div class="large-6 columns">
-    <h4>This is a content section.</h4>
-    <h4>Name:<p> <%= @seller.name %> </p></h4>
-    <p>Bacon ipsum dolor sit amet nulla ham qui sint exercitation eiusmod commodo, chuck duis velit. Aute in reprehenderit, dolore aliqua non est magna in labore pig pork biltong. Eiusmod swine spare ribs reprehenderit culpa. Boudin aliqua adipisicing rump corned beef.</p>
+   
+   
+    <div class="row">
+      
+   
+    <div class="row">
+      <div class="large-12 columns">
+            <h3><%= @seller.name %></h3><br>
+        <div class="row">
+          <div class="large-8 small-8 columns">
+            <div class="panel">
+              <img id="seller-profile" src="<%=@seller.image%>">
+              <h6 class="subheader"></h6>
+              <p id="seller-text"><%= @seller.story%></p>
+            </div>
+          </div>
+           
+                        
+          <div class="large-4 small-12 columns">
+            <h4>Work by <%= @seller.name %></h4><hr>
+            <div class="panel">
+              <h5><a href="#">Post Title 1</a></h5>
+              <h6 class="subheader">
+                Risus ligula, aliquam nec fermentum vitae, sollicitudin eget urna. Suspendisse ultrices ornare tempor...
+              </h6>
+
+              <h6><a href="#">Read More »</a></h6>
+            </div>
+
+            <div class="panel hide-for-small">
+              <h5><a href="#">Post Title 2 »</a></h5>
+            </div>
+
+            <div class="panel hide-for-small">
+              <h5><a href="#">Post Title 3 »</a></h5>
+            </div>
+          </div>
+        </div>
+      </div>
+     <% unless current_buyer %>
+        <a href="/sellers/<%= @seller.id %>/edit" class="expand button radius">Edit</a>
+        <form action="/sellers/<%= @seller.id %>" method="POST">
+          <input type="hidden" name="_method" value="DELETE">
+          <input type="submit" value="Delete this post" class="expand button radius alert">
+        </form>  
+      <% end %>
+           
+
+    </div>   
   </div>
 </div>
 
-<div class="row">
-  <hr/>
-  <div class="large-6 columns">
-    <h4>This is a content section.</h4>
-    <p>Bacon ipsum dolor sit amet nulla ham qui sint exercitation eiusmod commodo, chuck duis velit. Aute in reprehenderit, dolore aliqua non est magna in labore pig pork biltong. Eiusmod swine spare ribs reprehenderit culpa. Boudin aliqua adipisicing rump corned beef.</p>
-  </div>
-  <div class="large-6 columns">
-    <h4>This is a content section.</h4>
-    <p>Pork drumstick turkey fugiat. Tri-tip elit turducken pork chop in. Swine short ribs meatball irure bacon nulla pork belly cupidatat meatloaf cow. Nulla corned beef sunt ball tip, qui bresaola enim jowl. Capicola short ribs minim salami nulla nostrud pastrami.</p>
-  </div>
-</div>
-
-
-<% unless current_buyer %>
-  <form action="/sellers/<%= @seller.id %>" method="POST">
-    <input type="hidden" name="_method" value="DELETE">
-    <input type="submit" class="button" value="Delete this post">
-  </form>
-  <a href="/sellers/<%= @seller.id %>/edit" class="button">Edit</a>
-  <a href="/sellers/<%= @seller.id %>/edit" class="button">Home</a>
-<% end %>
+<script>
+document.write('<script src=js/vendor/' +
+('__proto__' in {} ? 'zepto' : 'jquery') +
+'.js><\/script>')
+</script>
+<script src="js/foundation.min.js"></script>
+<script>
+  $(document).foundation();
+</script>
 
