--- a/app/views/sellers/edit.erb
+++ b/app/views/sellers/edit.erb
@@ -44,7 +44,7 @@
   <div class="row">
     <div class="large-12 columns">
       <label name="story">Story
-        <textarea placeholder="small-12.columns" name="story"></textarea>
+        <textarea placeholder="small-12.columns" name="story" value="<%= @seller && @seller.story%>"></textarea>
       </label>
     </div>
      <button class="button success" id="sellers_submit" type="submit">Submit</button>
