--- a/public/stylesheets/application.css
+++ b/public/stylesheets/application.css
@@ -6,6 +6,10 @@
   margin-top: 50px;
 }
 
+#nav-bar_logo {
+  margin-left: 4rem;
+}
+
 @keyframes slidy {
   0% { left: 0%; }
   20% { left: 0%; }
@@ -49,6 +53,11 @@ div#slider figure {
 .product_errors {
   text-align: center;
   font-size: 20;
+}
+
+#seller-profile {
+  float:left;
+  margin-right: 1rem;
 }
 
 #banner {
