--- a/public/stylesheets/foundation.css
+++ b/public/stylesheets/foundation.css
@@ -1822,7 +1822,7 @@ meta.foundation-mq-topbar {
         padding: 0; } }
 
 .top-bar-section {
-  left: 0;
+ 
   position: relative;
   width: auto;
   transition: left 300ms ease-out; }
@@ -1835,29 +1835,30 @@ meta.foundation-mq-topbar {
     width: 100%; }
   .top-bar-section .divider,
   .top-bar-section [role="separator"] {
-    border-top: solid 1px #1a1a1a;
+/*    border-top: solid 1px #1a1a1a;*/
     clear: both;
     height: 1px;
     width: 100%; }
   .top-bar-section ul li {
-    background: #333333; }
+    background: white; }
     .top-bar-section ul li > a {
-      color: #FFFFFF;
-      display: block;
+      color: #43AC6A;
+      display: inline-block;
       font-family: "Helvetica Neue", Helvetica, Roboto, Arial, sans-serif;
       font-size: 0.8125rem;
       font-weight: normal;
       padding-left: 0.9375rem;
       padding: 12px 0 12px 0.9375rem;
       text-transform: none;
-      width: 100%; }
+      width: 100%;
+      height: 100%; }
       .top-bar-section ul li > a.button {
-        font-size: 0.8125rem;
+        font-size: 1rem;
         padding-left: 0.9375rem;
         padding-right: 0.9375rem;
-        background-color: #008CBA;
-        border-color: #007095;
-        color: #FFFFFF; }
+        background-color: #white;
+        /*border: 1px solid #007095;*/
+        color: #43AC6A; }
         .top-bar-section ul li > a.button:hover, .top-bar-section ul li > a.button:focus {
           background-color: #007095; }
         .top-bar-section ul li > a.button:hover, .top-bar-section ul li > a.button:focus {
@@ -1871,9 +1872,9 @@ meta.foundation-mq-topbar {
         .top-bar-section ul li > a.button.secondary:hover, .top-bar-section ul li > a.button.secondary:focus {
           color: #333333; }
       .top-bar-section ul li > a.button.success {
-        background-color: #43AC6A;
+        background-color: #FFFFFF;
         border-color: #368a55;
-        color: #FFFFFF; }
+        color: #43AC6A; }
         .top-bar-section ul li > a.button.success:hover, .top-bar-section ul li > a.button.success:focus {
           background-color: #368a55; }
         .top-bar-section ul li > a.button.success:hover, .top-bar-section ul li > a.button.success:focus {
@@ -4671,7 +4672,7 @@ blockquote p {
   -webkit-backface-visibility: hidden;
   background: white;
   color: #418B2A;
-  box-shadow: 0 0 1px #BCEAAC;
+  box-shadow: none;
   height: 4rem;
   line-height: 2.8125rem;
   position: relative; }
