--- a/app/views/sellers/seller.erb
+++ b/app/views/sellers/seller.erb
@@ -4,6 +4,7 @@
       <img src="<%= seller.image %>">
       <div class="profile-info">
         <h4 class="subheader"><%= seller.name %></h4>
+        <h5>A little more about me..</h5>
         <p>
           <%= seller.blurb %>
         </p>
