--- a/public/stylesheets/application.css
+++ b/public/stylesheets/application.css
@@ -10,6 +10,10 @@
 100% { left: -400%; }
 }
 
+#nav-bar_logo {
+  margin-left: 4rem;
+}
+
 body { margin: 0; } 
 div#slider { overflow: hidden; }
 div#slider figure img { width: 20%; float: left; }
