seller profile edited

--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -37,3 +37,22 @@
 <div id="banner">
   <img src="/images/logo/pamoja_white.png" alt="pamoja">
 </div>
+
+
+<div class="row">
+<p><em>"No one has ever become poor by giving." Anne Frank</em></p>
+</div>
+
+<div class="row">
+
+
+<div id="below-banner">
+  <p>Keytar shabby chic freegan fingerstache banjo, next level farm-to-table Godard Austin small batch mumblecore fanny pack fashion axe sustainable. PBR food truck literally vegan taxidermy. Shabby chic cred pork belly mumblecore. Hella ethical gastropub art party, twee bespoke butcher VHS typewriter. Sustainable biodiesel gentrify mixtape forage, street art whatever actually Portland readymade. Pickled Blue Bottle deep v tofu photo booth hella listicle bespoke art party, four dollar toast pop-up. Lumbersexual fingerstache Austin, forage craft beer art party Kickstarter 8-bit mumblecore brunch pickled distillery +1 raw denim salvia.
+
+Neutra raw denim Etsy disrupt Shoreditch. Synth normcore retro, mumblecore Etsy listicle pork belly actually. Cliche +1 drinking vinegar, art party readymade Bushwick hashtag. 3 wolf moon PBR ennui gluten-free. Etsy salvia twee sriracha fashion axe Austin. Church-key actually meh locavore. Leggings Intelligentsia sustainable fap, locavore PBR Bushwick roof party beard.
+
+Pop-up twee cronut, Shoreditch vinyl listicle Intelligentsia umami irony fingerstache lo-fi gentrify Marfa tilde. Tattooed cliche photo booth cronut, chambray messenger bag ethical trust fund occupy drinking vinegar Carles Echo Park. Swag pug cred next level disrupt Austin, kogi fashion axe taxidermy Tumblr retro you probably haven't heard of them bespoke. Quinoa whatever tousled dreamcatcher, vegan single-origin coffee keytar raw denim. Meditation post-ironic migas whatever, fingerstache lo-fi occupy photo booth mumblecore Echo Park single-origin coffee shabby chic Intelligentsia selfies. Biodiesel next level farm-to-table, tilde bicycle rights aesthetic kogi master cleanse forage. Health goth +1 vinyl, meggings mustache paleo narwhal.
+
+Sartorial PBR&B Neutra cred, farm-to-table artisan bitters taxidermy wayfarers meggings. Messenger bag typewriter listicle Odd Future cold-pressed. YOLO organic try-hard narwhal vinyl meditation, tattooed Helve</p>
+</div>
+</div>
