--- a/app/views/sellers/index.erb
+++ b/app/views/sellers/index.erb
@@ -3,8 +3,8 @@
   <%= erb :'sellers/seller', locals: { seller: seller } %>
 <% end %> 
 
-
+<% unless current_buyer %>
 <a href="/sellers/new" class="button expand radius">Add a new seller</a>
-
+<% end %>
 
   
