--- a/app/views/sellers/new.erb
+++ b/app/views/sellers/new.erb
@@ -41,7 +41,7 @@
   <div class="row"> 
    <div class="small-6 columns">
       <label name="blurb">Brief Intro
-        <input type="text" placeholkkfder="Give us a breief introduction - MAX 140 characters" name="blurb" value="<%= @seller && @seller.blurb %>"/>
+        <input type="text" placeholder="MAX 140 characters" name="blurb" value="<%= @seller && @seller.blurb %>"/>
       </label>
     </div>
     <div class="small-6 columns">
@@ -66,7 +66,7 @@
   <div class="row">
     <div class="small-12 columns">
       <label name="story">Story
-        <textarea placeholder="Your story goes here" name="story"></textarea>
+        <textarea placeholder="MIN 140 characters" name="story"></textarea>
       </label>
     </div>
     <div class="row">
