--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -37,3 +37,12 @@
 <div id="banner">
   <img src="/images/logo/pamoja_white.png" alt="pamoja">
 </div>
+
+<div class="row">
+  <div class="large-12 columns homepage-spacing">
+    <img src="http://placehold.it/400x300&text=[img]"/>
+  <h1>About</h1>
+  <p>Bacon ipsum dolor sit amet nulla ham qui sint exercitation eiusmod commodo, chuck duis velit. Aute in reprehenderit, dolore aliqua non est magna in labore pig pork biltong. Eiusmod swine spare ribs reprehenderit culpa. Boudin aliqua adipisicing rump corned beef.</p>
+  </div>
+</div>
+ 
