added content front page

--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -40,9 +40,10 @@
 
 <div class="row">
   <div class="large-12 columns homepage-spacing">
-    <img src="http://placehold.it/400x300&text=[img]"/>
+    <img src="http://www.alterecofoods.com/wp-content/uploads/2014/05/Fair-Trade-Certified-Logo-CMYK.png"/>
   <h1>About</h1>
-  <p>Bacon ipsum dolor sit amet nulla ham qui sint exercitation eiusmod commodo, chuck duis velit. Aute in reprehenderit, dolore aliqua non est magna in labore pig pork biltong. Eiusmod swine spare ribs reprehenderit culpa. Boudin aliqua adipisicing rump corned beef.</p>
+    <p>Fair Trade is a different way of doing business. It's about making principles of fairness and decency mean something in the marketplace.
+    It seeks to change the terms of trade for the products we buy - to ensure the farmers and artisans behind those products get a better deal. Most often this is understood to mean better prices for producers, but it often means longer-term and more meaningful trading relationships as well.</p>
   </div>
 </div>
  
