--- a/public/stylesheets/application.css
+++ b/public/stylesheets/application.css
@@ -302,5 +302,10 @@ color: #cc181e; }
 .homepage-spacing img {
   float: left;
   margin-right: 10px;
+  width: 200px;
+  height: 200px;
 }
 
+.homepage-spacing p, h1 {
+  font-family: 'Dosis', sans-serif;
+}
