More seed products

--- a/app/views/products/show.erb
+++ b/app/views/products/show.erb
@@ -14,6 +14,8 @@
       <img id="thumb_2" src="<%= @seller.image %>">
       <h4><%= @seller.name %></h4>
       <p><%= @seller.location %></p>
+      <h4>Category:</h4>
+      <p><%= @product.category %></p>
     </div>
     <h2>Description:</h2>
       <p>
