more minor changes to format/css

--- a/app/views/sellers/show.erb
+++ b/app/views/sellers/show.erb
@@ -19,7 +19,7 @@
             <h3><%= @seller.name %></h3><br>
         <div class="row">
           <div class="large-8 small-8 columns">
-            <div id="seller-info" class="panel">
+            <div id="seller-info">
               <div id="info-wrap">
                 <img id="seller-profile" src="<%=@seller.image%>">
                 <h6 class="subheader"></h6>
