--- a/public/stylesheets/application.css
+++ b/public/stylesheets/application.css
@@ -23,19 +23,20 @@
   margin: auto 0;
 }
 
-.row #below-banner {
-  max-width: 100%;
-}
-#below-banner {
+body #below-banner {
   background-image: url('http://www.traid.org.uk/wp-content/uploads/2013/06/fairtrade_foundation_project.jpg');
-  background-color: transparent;
-}
-
-#below-banner img {
   opacity: 0.4;
 }
 
-body { margin: 0; } 
+#below-banner-text {
+  font-weight: bold;
+}
+
+#product_page div:hover {
+  
+}
+
+body { margin: 0; } <div class="image-wrapper overlay-fade-in">
 div#slider { overflow: hidden; }
 div#slider figure img { width: 20%; float: left; }
 div#slider figure { 
