--- a/app/views/sellers/index.erb
+++ b/app/views/sellers/index.erb
@@ -4,7 +4,7 @@
 <% end %> 
 
 <% unless current_buyer %>
-<a href="/sellers/new" class="button expand radius">Add a new seller</a>
+<a href="/sellers/new" class="button expand radius">Add New Seller</a>
 <% end %>
 
   
