minor css changes made as well as extra a hrefs added to some pages

--- a/app/views/products/show.erb
+++ b/app/views/products/show.erb
@@ -19,7 +19,7 @@
         <p><%= @product.category %></p>
       </div>
     </a>
-    <h2>Description:</h2>
+    <h3 style="text-align:center">Description:</h3>
       <p>
         <%= @product.description %>
       </p>
