--- a/app/views/sellers/seller.erb
+++ b/app/views/sellers/seller.erb
@@ -9,8 +9,8 @@
           <%= seller.blurb %>
         </p>
       </div>
-        <p><small>Created: <%= seller.created_at %> </small></p>
-        <p><small>Updated: <%= seller.updated_at %></small></p> 
+        <p style="text-align:center"><small>Created: <%= seller.created_at %> </small><br>
+         <small>Updated: <%= seller.updated_at %></small></p> 
     </div>
   </div>
 </a>
