--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -4,7 +4,7 @@
       <figure>
       <% @products.take(5).each do |product| %>
         <% product.images.each do |image| %>
-          <img src="<%= image.file_path %>" alt="" />
+          <a href="/products/<%= product.id %>"><img src="<%= image.file_path %>" alt="" /></a>
         <% end %>
       <% end %>
      </figure>
@@ -15,7 +15,7 @@
      <figure>
       <% @products.where(id: 6..10).each do |product| %>
         <% product.images.each do |image| %>
-          <img src="<%= image.file_path %>" alt="" />
+          <a href="/products/<%= product.id %>"><img src="<%= image.file_path %>" alt="" /></a>
         <% end %>
       <% end %>
      </figure>
@@ -26,7 +26,7 @@
      <figure>
       <% @products.last(5).each do |product| %>
         <% product.images.each do |image| %>
-          <img src="<%= image.file_path %>" alt="" />
+          <a href="/products/<%= product.id %>"><img src="<%= image.file_path %>" alt="" /></a>
         <% end %>
       <% end %>
      </figure>
