--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -38,16 +38,16 @@
   <img src="/images/logo/pamoja_white.png" alt="pamoja">
 </div>
 
-<div class="row">
-<p><em>"No one has ever become poor by giving." Anne Frank</em></p>
-</div>
+<div id="quote">
+  <p><em>"No one has ever become poor by giving." Anne Frank</em></p>
 
 <div class="row">
   <div class="large-12 columns homepage-spacing">
-    <img src="http://www.alterecofoods.com/wp-content/uploads/2014/05/Fair-Trade-Certified-Logo-CMYK.png"/>
-  <h1>About</h1>
+    <img src="http://www.alterecofoods.com/wp-content/uploads/2014/05/Fair-Trade-Certified-Logo-CMYK.png"/><br>
+    <div id="text">
     <p>Fair Trade is a different way of doing business. It's about making principles of fairness and decency mean something in the marketplace.
-    It seeks to change the terms of trade for the products we buy - to ensure the farmers and artisans behind those products get a better deal. Most often this is understood to mean better prices for producers, but it often means longer-term and more meaningful trading relationships as well.</p>
+    It seeks to change the terms of trade for the products we buy - to ensure the farmers and artisans behind those products get a better deal. Most often this is understood to mean better prices for producers, but it often means longer-term and more meaningful trading relationships as well.</p></div>
   </div>
+</div>
 </div>
  
