--- a/public/stylesheets/application.css
+++ b/public/stylesheets/application.css
@@ -14,6 +14,28 @@
   margin-left: 4rem;
 }
 
+#quote {
+  text-align: center;
+ /* background-color: #dfdfdf;*/
+ background-image: url('http://www.traid.org.uk/wp-content/uploads/2013/06/fairtrade_foundation_project.jpg');
+}
+
+#quote p {
+  font-size: 150%;
+  font-weight: bold;
+  color: white;
+  padding: 2rem 0 2rem 0;
+}
+
+#quote .row div h1 {
+  color: white;
+  width: 20rem;
+}
+
+#text {
+
+}
+
 #seller-info {
   min-height: 800px;
 }
@@ -21,11 +43,6 @@
 #info-wrap {
   max-height: 500px;
   margin: auto 0;
-}
-
-body #below-banner {
-  background-image: url('http://www.traid.org.uk/wp-content/uploads/2013/06/fairtrade_foundation_project.jpg');
-  opacity: 0.4;
 }
 
 #below-banner-text {
