small change to button

--- a/app/views/products/show.erb
+++ b/app/views/products/show.erb
@@ -23,11 +23,17 @@
       <p>
         <%= @product.description %>
       </p>
+        <% if current_buyer %>
         <h3 class="text-center">$<%= @product.price %></h3>
         <form method="post" action="/cart/item/add">
           <input type="hidden" name="product_id" value="<%= @product.id %>">
-          <input type="submit" value="Add to cart" class="expand button radius success">
+          <input type="submit" value="Add to cart" class="expand button radius">
         </form>
+        <form method="post" action="/cart/item/add/cart">
+          <input type="hidden" name="product_id" value="<%= @product.id %>">
+          <input type="submit" value="Buy Now" class="expand button radius success">
+        </form>
+        <% end %>
         <% unless current_buyer %>
           <form action="/products/<%= @product.id %>" method="POST">
             <input type="hidden" name="_method" value="DELETE">
