--- a/app/views/index.erb
+++ b/app/views/index.erb
@@ -43,10 +43,11 @@
 
 <div class="row">
   <div class="large-12 columns homepage-spacing">
-    <img src="http://www.alterecofoods.com/wp-content/uploads/2014/05/Fair-Trade-Certified-Logo-CMYK.png"/><br>
+    <img src="http://www.alterecofoods.com/wp-content/uploads/2014/05/Fair-Trade-Certified-Logo-CMYK.png"/>
     <div id="text">
-    <p>Fair Trade is a different way of doing business. It's about making principles of fairness and decency mean something in the marketplace.
-    It seeks to change the terms of trade for the products we buy - to ensure the farmers and artisans behind those products get a better deal. Most often this is understood to mean better prices for producers, but it often means longer-term and more meaningful trading relationships as well.</p></div>
+      <p>Fair Trade is a different way of doing business. It's about making principles of fairness and decency mean something in the marketplace.
+      It seeks to change the terms of trade for the products we buy - to ensure the farmers and artisans behind those products get a better deal. Most often this is understood to mean better prices for producers, but it often means longer-term and more meaningful trading relationships as well.</p>
+    </div>
   </div>
 </div>
 </div>
