video tag changed to iframe

--- a/app/views/sellers/show.erb
+++ b/app/views/sellers/show.erb
@@ -3,9 +3,7 @@
      <div class="row">
       <div class="large-12 hide-for-small">
           <div id="featured">
-            <video width="1000" height="500" autoplay>
-              <source src="<%= @seller.video %>" type="video/mp4">
-            </video>
+            <iframe width="1000" height="500" src="https://www.youtube.com/embed/NhQJrz-aDfI" frameborder="0" allowfullscreen></iframe>
           </div>
     </div>
   </div>
