A few changes made for README

--- a/app/views/sellers/new.erb
+++ b/app/views/sellers/new.erb
@@ -1,3 +1,5 @@
+<h1 class="text-center">Add New Seller</h1>
+
 <form id="new_sellers" method="post" action="/sellers/new" enctype="multipart/form-data">
 
   <% if @no_file_error%>
@@ -16,7 +18,7 @@
       </div>
       <% end %>
   <% end %>
-
+  
   <div class="row">
     <div class="small-12 columns">
       <label name="name">Name
